--- a/app/views/favorites/index.js.erb
+++ b/app/views/favorites/index.js.erb
@@ -1,2 +1,2 @@
 
-$(".material-icons").html("<%= j(render 'blogs/favorite', { blog_id: @favorites.blog_id, user_id: @favorites.user_id })")
+$(".material-icons").html("<%= j(render 'blogs/favorite', { blog_id: @favorites.blog_id, user_id: @favorites.user_id })");
